--- a/schedule.html
+++ b/schedule.html
@@ -2,7 +2,7 @@
 <head>
 <link rel="stylesheet" type="text/css" href="finalproject.css">
 </head>
-<body>
+<body class="mainBody">
 <h1 class="header">Schedule</h1>
 <table class="scheduleTable">
   <tr>
