--- a/about.html
+++ b/about.html
@@ -7,5 +7,11 @@
 <p class="aboutParagraph">
 The Philadelphia Eagles are a professional football team in Philadelphia, Pennsylvania. They are in the NFC East division along with the Cowboys, Redskins, and Giants.<br>This Page was created by Drake Eckles to offer information about the Eagles to fans everywhere.<br> <a href="mailto:S1422158@student.mcckc.edu">Email Me</a> 
 </p>
+  <p class="aboutParagraph">
+  Make sure to check out a couple of other sites that are based on the Philadelphia Eagles!<br>
+    <a href="http://www.philadelphiaeagles.com/">philadelphiaeagles.com</a><br>
+        <a href="http://www.bleedinggreennation.com/">bleedinggreennation.com</a>
+
+  </p>
 </body>
 </html>
