--- a/homepage.html
+++ b/homepage.html
@@ -25,7 +25,7 @@
 </ul>
 <h1 class="header">The Philadelphia Eagles</h1>
 <p class="aboutParagraph">
-Welcome to my Philadelphia Eagles website!<br> On the site you can find information like the team's schedule, their roster, highlights, and even submit your own news to possible get featured on the site!
+Welcome to my Philadelphia Eagles website!<br> On the site you can find information like the team's schedule, their roster, highlights, and even submit your own news to possibly get featured on the site!
 </p>
 </body>
 </html>
