--- a/media.html
+++ b/media.html
@@ -21,7 +21,7 @@
 </iframe></td>
   </tr>
   <tr>
-    <td>Week 5/td>
+    <td>Week 5</td>
      <td><iframe width="420" height="345" src="https://www.youtube.com/watch?v=wpDXBOJc-DY">
 </iframe></td>
   </tr>
