--- a/homepage.html
+++ b/homepage.html
@@ -1,6 +1,20 @@
 <html>
 <head>
 <link rel="stylesheet" type="text/css" href="finalproject.css">
+  <style>
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: black;
+}
+
+li {
+    float: left;
+display: block;
+}
+  </style>
 </head>
 <body class="mainBody">
 <ul>
