--- a/homepage.html
+++ b/homepage.html
@@ -41,5 +41,6 @@ display: block;
 <p class="aboutParagraph">
 Welcome to my Philadelphia Eagles website!<br> On the site you can find information like the team's schedule, their roster, highlights, and even submit your own news to possibly get featured on the site!
 </p>
+  <img src="http://d1ya1fm0bicxg1.cloudfront.net/2015/05/promoted-media-optimized_5563313a984bf.jpg"/>
 </body>
 </html>
