--- a/media.html
+++ b/media.html
@@ -3,6 +3,40 @@
 <link rel="stylesheet" type="text/css" href="finalproject.css">
 </head>
 <body class="mainBody">
+  ul {
+    list-style-type: none;
+    overflow: hidden;
+    background-color: black;
+}
+li {
+    float: left;
+display: block;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+  </style>
+</head>
+<body class="mainBody">
+<ul>
+  <li><FORM METHOD="LINK" class="btn" ACTION="homepage.html">
+<INPUT TYPE="submit" VALUE="Home">
+</FORM></li>
+  <li><FORM METHOD="LINK" class="btn" ACTION="schedule.html">
+<INPUT TYPE="submit" VALUE="Schedule">
+</FORM></li>
+  <li><FORM METHOD="LINK" class="btn" ACTION="news.html">
+<INPUT TYPE="submit" VALUE="Submit Your News">
+</FORM></li>
+  <li><FORM METHOD="LINK" class="btn" ACTION="roster.html">
+<INPUT TYPE="submit" VALUE="Roster">
+</FORM></li>
+  <li><FORM METHOD="LINK" class="btn" ACTION="media.html">
+<INPUT TYPE="submit" VALUE="Highlights">
+</FORM></li>
+  <li><FORM METHOD="LINK" class="btn" ACTION="about.html">
+<INPUT TYPE="submit" VALUE="About">
+</FORM></li>
+</ul>
 <h1 class="header">Highlights</h1>
 <table class="scheduleTable">
   <tr>
