--- a/schedule.html
+++ b/schedule.html
@@ -1,18 +1,18 @@
 <html>
 <head>
 <link rel="stylesheet" type="text/css" href="finalproject.css">
-</head>
-<body class="mainBody">
-  ul {
+  <style>
+ul {
     list-style-type: none;
+    margin: 0;
+    padding: 0;
     overflow: hidden;
     background-color: black;
 }
+
 li {
     float: left;
 display: block;
-  padding-left: 10px;
-  padding-right: 10px;
 }
   </style>
 </head>
