--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@ display: block;
 </head>
 <body class="mainBody">
 <ul>
-  <li><FORM METHOD="LINK" class="btn" ACTION="homepage.html">
+  <li><FORM METHOD="LINK" class="btn" ACTION="index.html">
 <INPUT TYPE="submit" VALUE="Home">
 </FORM></li>
   <li><FORM METHOD="LINK" class="btn" ACTION="schedule.html">
