--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@ The Philadelphia Eagles are a professional football team in Philadelphia, Pennsy
   Make sure to check out a couple of other sites that are based on the Philadelphia Eagles!<br>
     <a href="http://www.philadelphiaeagles.com/">philadelphiaeagles.com</a><br>
         <a href="http://www.bleedinggreennation.com/">bleedinggreennation.com</a>
-
-  </p>
+  </p><br>
+  <img src="http://3.bp.blogspot.com/_xHjP1chJYqM/TGymCKSE7pI/AAAAAAAAAgA/e4obqZ9hPzk/s1600/Philadelphia+Eagles+1200.jpg"/>
 </body>
 </html>
